gcc/testsuite/rust/rustc/ui/issues/issue-20714.rs
struct G;

fn main() {
    let g = G(); // { dg-error ".E0618." "" { target *-*-* } }
}

